--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -41,8 +41,8 @@
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
-        Palette URL: <a href=https://coolors.co/453823-561f37-39a2ae-55dbcb-75e4b3" 
-        target="_blank">https://coolors.co/453823-561f37-39a2ae-55dbcb-75e4b3</a>
+        Palette URL: <a href=https://coolors.co/561f37-39a2ae-55dbcb-75e4b3" 
+        target="_blank">https://coolors.co/561f37-39a2ae-55dbcb-75e4b3</a>
 
     <table class="colors">
       <tr>
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#561F37]</td>
+        <td class="secondary">[#39a2ae]</td>
+        <td class="accent1">[#55dbcb]</td>
+        <td class="accent2">[#75e4b3]</td>
       </tr>
     </table>
 
@@ -66,11 +66,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Rock Salt
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Roboto
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
