--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -41,7 +41,7 @@
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
-        Palette URL: <a href=https://coolors.co/561f37-39a2ae-55dbcb-75e4b3" 
+        Palette URL: <a href="https://coolors.co/561f37-39a2ae-55dbcb-75e4b3" 
         target="_blank">https://coolors.co/561f37-39a2ae-55dbcb-75e4b3</a>
 
     <table class="colors">
