--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,13 +26,13 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a class='book' href="contactus.html">Book Now</a>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class="button-box">
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
-        </div>
-        <main class="home-grid">
+          </div>
+          <main class="home-grid">
             <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -57,17 +57,17 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 20XX - Leah Chamberlain</p>
+            <p>Dry Oar © 20XX - Your First and Last Name Here</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
-                <a href="https://facebook.com">
+                <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
-                <a href="https://twitter.com">
+                <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com">
+                <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
