--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -29,7 +29,7 @@
 
       <hr>
       <h2>Branding</h2>
-      <h3>Leah's Books</h3>
+      <h3>Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img src="styles/logo.png" alt="Logo image">
       <hr>
@@ -62,7 +62,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Rock Salt  <!-- change this -->
+        Heading Font: Leckerli one  <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Roboto  <!-- change this -->
