--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="https://app.moqups.com/8JfJGdGX6q9a1yqNiZTnSC9zhYASBcKQ/edit/page/ad64222d5" alt="page 2 wireframe"> -->
   </main>
 </body>
 
