--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe.png" alt="page 2 wireframe">
+    <img src="WDD130/wwr/styles/wireframe.png" alt="page 2 wireframe">
   </main>
 </body>
 
