--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -25,7 +25,7 @@
 
 
       <h3>Audience</h3>
-      <p>My audience is anyone looking for a great read either with fantasy genres or fiction.</p>  <!-- change this -->
+      <p>My audience is primarily people who love the ACOTAR and TOG series! </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">FANART</a>
+        <a href="#">MERCHANDISE</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          FANART <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          MERCHANDISE  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,56 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        People will come to my site to see fanart of books that I have read. I will also have a rating next to the book covers of each book. Some questions that visitors should expect to be answered from my site are honest reviews about my likes and dislikes of the book. It will
+        also show fanart images of each book so that they could decide for themselves if the worlds depicted in the fanart interest them. I will also have main characters names in each book with fanart pictures of them. 
+        Some activities that visitors will want to complete on my site is looking at all the beautiful fanart and reading a short description about each image. Information that is necessary for my website to include actions that the users will use, is links to various sites of where 
+        they can buy the book for the cheapest and where to buy the collectors edition books and fan merchandise for some book series. Visitors will come to my site instead because it will have all the information that they need, especially for people who are big fans of the book series that I will be talking about. 
+        I have always had such passion for these books and the beautiful art that people around the world have made for these wonderful books. I hope that other can appreciate the beauty of the book summaries, fanart, and merchandise like I have throughout the years since I have read them.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/ACOTAR.jpeg" alt="5 stars">
+        <img src="images/ACOMAF.jpg" alt="5 stars">
+        <img src="images/ACOWAR.jpeg" alt="4 stars">
+        <img src="images/ACOFAS.jpeg" alt="4 stars">
+        <img src="images/ACOSF.jpeg" alt="5 stars">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>FANART</h3>
       <p>
-        [Written copy for the Page 2 here]
+        I love the ACOTAR and the TOG series so I really wanted to share all of the beautiful fanart with all of the avid readers of ACOTAR and TOG!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/FANART1.png" alt="image for page">
+        <img src="images/FANART2.png" alt="image for page">
+        <img src="images/FANART3.png" alt="image for page">
+        <img src="images/FANART4.png" alt="image for page">
+        <img src="images/FANART5.png" alt="image for page">
+        <img src="images/FANART6.png" alt="image for page">
+        <img src="images/FANART7.png" alt="image for page">
+        <img src="images/FANART8.png" alt="image for page">
+        <img src="images/FANART9.png" alt="image for page">
+        <img src="images/FANART10.png" alt="image for page">
+        <img src="images/FANART11.png" alt="image for page">
+        <img src="images/FANART12.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>MERCHANDISE</h3>
       <p>
-        [Written copy for the Page 3 here]
+        I love the ACOTAR and the TOG series so much that I have so much of their merchandise! I want to share that beautiful clothing, stickers, and decals that are promoting the ACOTAR and TOG series!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/MERCH1.png" alt="image for page3">
+        <img src="images/MERCH2.png" alt="image for page3">
+        <img src="images/MERCH3.png" alt="image for page3">
+        <img src="images/MERCH4.png" alt="image for page3">
+        <img src="images/MERCH5.png" alt="image for page3">
+        <img src="images/MERCH6.png" alt="image for page3">
+        <img src="images/MERCH7.png" alt="image for page3">
+        <img src="images/MERCH8.png" alt="image for page3">
+        <img src="images/MERCH9.png" alt="image for page3">
+        <img src="images/MERCH10.png" alt="image for page3">
+        <img src="images/MERCH11.png" alt="image for page3">
+        <img src="images/MERCH12.png" alt="image for page3">
 
       </ul>
       <hr>
@@ -163,13 +190,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>FANART</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>MERCHANDISE</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
