--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -125,11 +125,13 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        People will come to my site to see fanart of books that I have read. I will also have a rating next to the book covers of each book. Some questions that visitors should expect to be answered from my site are honest reviews about my likes and dislikes of the book. It will
-        also show fanart images of each book so that they could decide for themselves if the worlds depicted in the fanart interest them. I will also have main characters names in each book with fanart pictures of them. 
-        Some activities that visitors will want to complete on my site is looking at all the beautiful fanart and reading a short description about each image. Information that is necessary for my website to include actions that the users will use, is links to various sites of where 
-        they can buy the book for the cheapest and where to buy the collectors edition books and fan merchandise for some book series. Visitors will come to my site instead because it will have all the information that they need, especially for people who are big fans of the book series that I will be talking about. 
-        I have always had such passion for these books and the beautiful art that people around the world have made for these wonderful books. I hope that other can appreciate the beauty of the book summaries, fanart, and merchandise like I have throughout the years since I have read them.
+        Welcome to my Book Review Site! I am glad to have you here! Who else absolutely loves the ACOTAR and TOG series? If not, then welcome to the amazing universe of ACOTAR and TOG! 
+        On this website, you will find my honest reviews of 
+        each book in these series followed by links that include summaries, study guides, and character information that will be helpful while reading these books.
+        To get you a little more excited about reading this new universe, I have also included a personalized FANART page that will help you visualize the 
+        characters and key moments in the books! After reading the books, I also have a MERCHANDISE page that will give you links to go buy some super cute
+        clothes, stickers, and decals with the theme of ACOTAR and TOG. I also have included links on this home page under each book review that will show you where the cheapest
+        place is to buy each of the series! Please email or message me if you have any reccomedations for book/book series that I should add!
       </p>
       <p>Images for the Home page</p>
         <img src="images/ACOTAR.jpeg" alt="5 stars">
@@ -137,6 +139,14 @@
         <img src="images/ACOWAR.jpeg" alt="4 stars">
         <img src="images/ACOFAS.jpeg" alt="4 stars">
         <img src="images/ACOSF.jpeg" alt="5 stars">
+        <img src="images/TOG1.jpg" alt="5 stars">
+        <img src="images/TOG2.jpg" alt="5 stars">
+        <img src="images/TOG3.jpg" alt="5 stars">
+        <img src="images/TOG4.jpg" alt="5 stars">
+        <img src="images/TOG5.png" alt="5 stars">
+        <img src="images/TOG6.jpg" alt="5 stars">
+        <img src="images/TOG7.jpg" alt="5 stars">
+        <img src="images/TOG8.jpg" alt="5 stars">
 
       </ul>
       <h3>FANART</h3>
