--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -65,7 +65,7 @@
         Heading Font: Leckerli one  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Roboto  <!-- change this -->
+        Paragraph Font: Amatic SC  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
