--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#ff6666]</td><td class="secondary">[#b8a470]</td><td class="accent1">[#3bc1c1]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#ff6666</td><td class="secondary">#b8a470</td><td class="accent1">#3bc1c1</td><td class="accent2">#FBC936</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
