--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Rivers</title>
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <div id="content">
+    <div id="content\">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <a id="logo_link\" href="index.html">
+                <img class="logo\" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -20,39 +20,32 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/grandcanyonriver.jpg" alt="People enjoying white water rafting">
+        <div id="grancanyonriver">
+            <div id="grancanyonriver-box">
+                <img id="grancanyonriver-img" src="images/grandcanyonriver.jpg" alt="River in the grand canyon">
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">World Famous Rafting Rivers</h1>
-                <h4>Exciting and fun rivers to raft! </h4>
-            </section>
           </div>
-          <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Salmon River</h2>
-            </section>
-            <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Rogue River</h2>
+          <main class="home-grid1">
+            <section class="rivers1-card">
+                <img class="rivers1-img" src="images/river1.jpg" alt="river in forest">
+                <img class="icon\" src="images/river_icon.png" alt="river icon">
+                <h2>Zambabwe River</h2>
             </section>
             <section class="rivers2-card">
-                <img class="card-img" src="images/images:rivers2.jpg" alt="river">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Zambezi River</h2>
+                <img class="rivers2-img" src="images/river2.jpg" alt="tent in mountains">
+                <img class="icon\" src="images/fire_icon.png" alt="fire icon">
+                <h2>Dumagete River</h2>
             </section>
-            <div id="background"></div>
-            <img class="mountains" src="images/rivermountains.jpg" alt="Misty mountains">
-            <section class="msg">
+            <section class="rivers3-card">
+                <img class="rivers3-img" src="images/river3.jpg" alt="rafting boat">
+                <img class="icon\" src="images/oars.png" alt="oars icon">
+                <h2>Salmon River</h2>
+            </section>
+            <div id="background\"></div>
+            <section class="msg\">
                 <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-                <div class="button-box">
-                    <a class="book" href="rates.html">Book Now</a>
-                </div>
+                <p>In case you were not aware, whitewater rafting can be one of the most adrenaline-pumping, thrill-seeking activities out there. From watching the horizon line disappear out of sight, signaling that you are about to drop 15 feet in 6 seconds, to paddling for your life through Class IV+ rapids, it is a wild ride. But you do not have to go that big to get the rush. No matter what size rapids you are tackling, you will definitely meet your summer excitement quota. What better way to bond with your amigos, than by battling huge rapids and quite possibly saving each others butts from falling out of the boat? While you are rafting, you are spending all day, every day with your crew. I am talking breakfast, rapids. Lunch, rapids. Dinner, camp, and possibly staring at the stars together before more rapids the next day. The point is, it is a lot of QT with your friends (or family for that matter), and you are all probably in dire need of giving your texting relationship a big time out. Rafting trips come off pricey at first glance, but when you start to break it down, it turns out they are actually pretty reasonable considering it is a full day or more of entertainment. Not to mention, all trips come complete with expert guides, gourmet food spreads, and lots of new memories to go home with. Yeah, that is pretty priceless. </p>
+                <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
         <footer>
