--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -34,7 +34,7 @@
             <section class="rivers2-card">
                 <img class="rivers2-img" src="images/river2.jpg" alt="tent in mountains">
                 <img class="icon\" src="images/fire_icon.png" alt="fire icon">
-                <h2>Dumagete River</h2>
+                <h2>Dumagetee River</h2>
             </section>
             <section class="rivers3-card">
                 <img class="rivers3-img" src="images/river3.jpg" alt="rafting boat">
