--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -192,23 +192,26 @@
         Wireframes
       </h2>
       <p>
-        Create three wireframes for your site. One for each page and list them here</p>
+        <img src="images/Home-wireframe.png" alt="Homepage wireframe">
+        <img src="images/Fanart-wireframe.png" alt="Fanart wireframe">
+        <img src="images/merchandise-wireframe.png" alt="merchandise wireframe">
+      </p>
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [My home page will primarily be a list of the books that my entire website is about and then having links for each book for study guides/reviews for each book. This is very beneficial information for people who love the ACOTAR/TOG series or even those who are being introduced to the series.]
       </p>
       <img src="#" alt="home page wireframe">
 
       <h3>FANART</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [This Fan Art page will primarily be for user entertainment, I will also have a download option for users so that they can download all or just some of the images that they like.]
       </p>
       <img src="#" alt="page 2 wireframe">
 
       <h3>MERCHANDISE</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [This merchandise page will be for users to look at certain clothing. stickers, and decals to purchase at different stores. Each column will be for a different store.]
       </p>
       <img src="#" alt="page 3 wireframe">
     </main>
