--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -25,6 +25,8 @@
                 <img id="grandcanyonriver-img" src="images/grandcanyonriver.jpg" alt="River in the grand canyon">
             </div>
           </div>
+          <section id="hero-msg">
+            <h1 class="home-title">So Many Rivers To Choose From!</h1>
           <main class="home-grid1">
             <section class="rivers1-card">
                 <img class="rivers1-img" src="images/river1.jpg" alt="river in forest">
@@ -41,7 +43,7 @@
                 <img class="icon\" src="images/oars.png" alt="oars icon">
                 <h2>Salmon River</h2>
             </section>
-            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+            <img class="mountains" src="images/river4.jpg" alt="River">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>In case you were not aware, whitewater rafting can be one of the most adrenaline-pumping, thrill-seeking activities out there. From watching the horizon line disappear out of sight, signaling that you are about to drop 15 feet in 6 seconds, to paddling for your life through Class IV+ rapids, it is a wild ride. But you do not have to go that big to get the rush. No matter what size rapids you are tackling, you will definitely meet your summer excitement quota. What better way to bond with your amigos, than by battling huge rapids and quite possibly saving each others butts from falling out of the boat? While you are rafting, you are spending all day, every day with your crew. I am talking breakfast, rapids. Lunch, rapids. Dinner, camp, and possibly staring at the stars together before more rapids the next day. The point is, it is a lot of QT with your friends (or family for that matter), and you are all probably in dire need of giving your texting relationship a big time out. Rafting trips come off pricey at first glance, but when you start to break it down, it turns out they are actually pretty reasonable considering it is a full day or more of entertainment. Not to mention, all trips come complete with expert guides, gourmet food spreads, and lots of new memories to go home with. Yeah, that is pretty priceless. </p>
