--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -25,9 +25,9 @@
                 <img id="grandcanyonriver-img" src="images/grandcanyonriver.jpg" alt="River in the grand canyon">
             </div>
           </div>
+        <main>
           <section id="hero-msg">
             <h1 class="home-title">Contact us</h1>
-            <main>
             <div id="feedback"></div>
                 <form action="/my-handling-form-page" method="post">
                     <ul>
@@ -48,7 +48,8 @@
                       </li>
                     </ul>
                   </form>
-            </main>
+            </section>
+        </main>
         <footer>
             <p>Dry Oar © 2023 - Leah Chamberlain</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
