--- a/bookreviews/site-plan.html
+++ b/bookreviews/site-plan.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">FANART</a>
-        <a href="#">MERCHANDISE</a>
+        <a href="index.html">Home</a>
+        <a href="fan-art.html">FANART</a>
+        <a href="merchandise.html">MERCHANDISE</a>
       </nav>
       <hr>
       <h2>
