--- a/bookreviews/index.html
+++ b/bookreviews/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +19,14 @@
                 <a href="merchandise.html">Merchandise</a>
             </nav>
         </header>
+        <div id="home">
+            <div id="home-box">
+                <img id="home-img" src="images/BookReviews.jpeg" alt="Home Page Book Review Img">
+            </div>
+            <section id="home-msg">
+                <h1 class="home-title">Welcome to My Book Reviews!</h1>
+            </section>
         <main>
-            <h1>Welcome to my Book Reviews!</h1>
-            <img src="images/BookReviews.jpeg" alt="Home Page Book Review Img">
             <p class="main-para">Welcome to my Book Review Site! I am glad to have you here! Who else absolutely loves "A Court of Thorns and Roses"(ACOTAR) and "Throne of glass"(TOG) 
                 series? If not, then welcome to the amazing universe of ACOTAR and TOG! On this website, you will find my honest reviews of 
                 each book in these series followed by links that include summaries, study guides, and character information that will be helpful 
@@ -108,7 +114,7 @@
                         </a>
                     <h2>Kingdom of Ash</h2>
                     </section>
-
+                </main>
         <footer>
             <p>Leah's Book Reviews © 2023 - Leah Chamberlain</p>
             <p><a href="site-plan.html">Site Plan</a></p>
