--- a/bookreviews/merchandise.html
+++ b/bookreviews/merchandise.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,14 +21,9 @@
         </header>
         <main>
             <h1>Welcome to my Merchandise page!</h1>
-            <img src="images/MERCH1.png" alt="Merchandise Main Img">
+            <img id="home-img" src="images/MERCH1.png" alt="Merchandise main img">
             <p class="main-para">I love the ACOTAR and the TOG series so much that I have so much of their merchandise! I want to share that beautiful clothing, stickers, and decals that are promoting the ACOTAR and TOG series!</p>
             <main class="merchandise-grid">
-                <section class="merch-card2">
-                    <a href="https://www.redbubble.com/i/t-shirt/TOG-CC-ACOTAR-Wings-by-FanBehavior/126294321.IJ6L0?country_code=US&utm_source=google&utm_medium=organic-shopping&utm_campaign=organic+shopping+-+cos_usa+-+l_eng+Classic%20Tee_product+-+content_1_books+-+content_2_fantasy+-+content_3_a%20court%20of%20thorns%20and%20roses+-+SKU_126294321-US-classic-tee&utm_id=126294321-US-classic-tee&utm_term=a%20court%20of%20thorns%20and%20roses&utm_content=books-fantasy" target="_blank">
-                        <img class="merch-img" src="images/MERCH2.png" alt="MERCH 2">
-                    </a>
-                </section>
                 <section class="merch-card3">
                     <a href="https://www.etsy.com/listing/1372328160/we-are-the-thirteen-t-shirt-white" target="_blank">
                         <img class="merch-img" src="images/MERCH3.png" alt="MERCH 3">
