--- a/bookreviews/fan-art.html
+++ b/bookreviews/fan-art.html
@@ -19,7 +19,6 @@
                 <a href="merchandise.html">Merchandise</a>
             </nav>
         </header>
-        <main>
             <h1>Welcome to my Fan Art page!</h1>
             <p class="main-para">I love the ACOTAR and the TOG series so I really wanted to share all of the beautiful fanart with all of the avid readers of ACOTAR and TOG!</p>
             <main class="fan-art-grid">
@@ -89,7 +88,7 @@
                 <section class="fan-art-card22">
                     <img class="fan-art-img" src="images/FANART22.jpg" alt="FANART 22">
                 </section>
-        </main>
+            </main>
         <footer>
             <p>Leah's Book Reviews © 2023 - Leah Chamberlain</p>
             <p><a href="site-plan.html">Site Plan</a></p>
@@ -106,5 +105,6 @@
                 </a>
             </div>
         </footer>
+    </div>
 </body>
 </html>
