--- a/bookreviews/merchandise.html
+++ b/bookreviews/merchandise.html
@@ -19,7 +19,6 @@
                 <a href="merchandise.html">Merchandise</a>
             </nav>
         </header>
-        <main>
             <h1>Welcome to my Merchandise page!</h1>
             <img id="home-img" src="images/MERCH1.png" alt="Merchandise main img">
             <p class="main-para">I love the ACOTAR and the TOG series so much that I have so much of their merchandise! I want to share that beautiful clothing, stickers, and decals that are promoting the ACOTAR and TOG series!</p>
@@ -74,7 +73,7 @@
                         <img class="merch-img" src="images/MERCH12.png" alt="MERCH 12">
                     </a>
                 </section>
-        </main>
+            </main>
         <footer>
             <p>Leah's Book Reviews © 2023 - Leah Chamberlain</p>
             <p><a href="site-plan.html">Site Plan</a></p>
@@ -91,5 +90,6 @@
                 </a>
             </div>
         </footer>
+    </div>
 </body>
 </html>
