--- a/bookreviews/index.html
+++ b/bookreviews/index.html
@@ -103,7 +103,7 @@
                     </section>
                     <section class="TOG7-card">
                         <a href="https://www.pluggedin.com/book-reviews/tower-of-dawn/" target="_blank">
-                            <img class="book-img" src="images/TOG7.jpg" alt="TOG7-card book cover">
+                            <img class="book-img" src="images/TOG7.jpeg" alt="TOG7-card book cover">
                         </a>
                     <h2>Tower of Dawn</h2>
                     </section>
